c1m1 removed added automatic elevator door opening (rely on built in timer) c1m1 melee spawn modifications c1m2 solidified some sneaky trash bags right at the start c1m2 traffic barrel fixes

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -95,18 +95,6 @@ modify:
 		"OnStartTouch" "call_elevator_button_prop,StartGlowing,,0,-1"
 	}
 }
-; --- Force the elevator doors to open after 20 seconds after reaching the ground floor (from when the door unlocks)
-modify:
-{
-	match:
-	{
-		"targetname" "relay_elevator_reached_bottom"
-	}
-	insert:
-	{
-		"OnTrigger" "elevator_door_button1,Press,,24,-1"
-	}
-}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -152,6 +140,30 @@ add:
 	"origin" "1681 5765 2667"
 	"angles" "-80.826 60.7614 -60.5252"
 	"ammo" "72"
+}
+; --- Make the melee in the map room always spawn
+modify:
+{
+	match:
+	{
+		"hammerid" "3883068"
+	}
+	replace:
+	{
+		"spawnflags" "3"
+	}
+}
+; --- Melee weapon in the room by the elevator
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "1920 5394 2475"
+	"angles" "0 143 90"
+	"melee_weapon" "any"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
 }
 
 ; =====================================================
