--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -588,6 +588,15 @@ add:
 ; --- Make trash bags solid at the start
 {
 	"classname" "prop_dynamic"
+	"origin" "1976 4440 470"
+	"angles" "3.99024 29.758 -6.93945"
+	"model" "models/props_junk/trashcluster01b.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendermode" "10"
+}
+{
+	"classname" "prop_dynamic"
 	"origin" "1256 2554 578"
 	"angles" "0.0 83.5 0.0"
 	"model" "models/props_junk/trashcluster01b.mdl"
@@ -802,6 +811,26 @@ add:
 	"boxmaxs" "5 49 4"
 	"initialstate" "1"
 	"BlockType" "0"
+}
+; --- Remove traffic barrel in the event area that block the police car
+filter:
+{
+	"hammerid" "941213"
+}
+{
+	"hammerid" "941217"
+}
+; --- Make traffic barrel by the exploding tanker movable
+modify:
+{
+	match:
+	{
+		"hammerid" "841232"
+	}
+	replace:
+	{
+		"spawnflags" "260"
+	}
 }
 
 
