--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -414,20 +414,21 @@ add:
 }
 {
 	"classname" "prop_dynamic"
+	"origin" "6204 -4856 430"
+	"angles" "0 127.779 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "prop_dynamic"
 	"origin" "6222 -4454 438"
 	"angles" "0 105 0"
 	"model" "models/props_vehicles/cara_95sedan_wrecked_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"parentname" "destruction_car_phys"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "6204 -4856 430"
-	"angles" "0 127.779 0"
-	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
-	"solid" "6"
-	"disableshadows" "1"
+	"targetname" "destruction_car_glass"
 }
 ; --- Clipping on draped bodies by the shack
 {
