c5m2 map distance to 600 c5m3 order tweaks and made pipe non-solid c5m3 made guns before sewer consistent c5m3 reduced added foliage slightly c5m3 removed some fallen barrels c5m5 reduced helicopter tank spawn delay Fixed some typo issues in map comments c5m5 added a melee spawn outside the saferoom

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -154,6 +154,7 @@ modify:
 	}
 }
 ; --- Melee weapon in the room by the elevator
+add:
 {
 	"classname" "weapon_melee_spawn"
 	"origin" "1920 5394 2475"
