--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -15,6 +15,28 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+modify:
+; --- Make the guns before the sewer drop always spawn a shotgun and SMG
+{
+	match:
+	{
+		"hammerid" "2131994"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+{
+	match:
+	{
+		"hammerid" "2131992"
+	}
+	replace:
+	{
+		"weapon_selection" "tier1_shotgun"
+	}
+}
 ; --- Remove some templates that force sets of items to spawn in the trailer drop house
 filter:
 {
@@ -294,23 +316,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from going out of bounds under the bridge drop
-{
-	"classname" "env_physics_blocker"
-	"origin" "6461 -3870 255"
-	"mins" "-515 -2 -159"
-	"maxs" "515 2 159"
-	"initialstate" "1"
-	"BlockType" "1"
-}
-{
-	"classname" "env_physics_blocker"
-	"origin" "5951 -4512 255"
-	"mins" "-2 -640 -159"
-	"maxs" "2 640 159"
-	"initialstate" "1"
-	"BlockType" "1"
-}
 ; --- Block survivors from standing on the shed after the bridge
 {
 	"classname" "env_physics_blocker"
@@ -329,7 +334,6 @@ add:
 	"BlockType" "1"
 }
 ; --- Block survivors from climbing around a fenced crypt in the cemetery
-add:
 {
 	"classname" "env_physics_blocker"
 	"origin" "8318 -4991 805"
@@ -359,6 +363,24 @@ add:
 ; ==                  OUT OF BOUNDS                  ==
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
+add:
+; --- Block survivors from going out of bounds under the bridge drop
+{
+	"classname" "env_physics_blocker"
+	"origin" "6461 -3870 255"
+	"mins" "-515 -2 -159"
+	"maxs" "515 2 159"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "5951 -4512 255"
+	"mins" "-2 -640 -159"
+	"maxs" "2 640 159"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
@@ -370,6 +392,13 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 filter:
+; --- Remove 2 fallen oil barrels near the saferoom
+{
+	"hammerid" "1588934"
+}
+{
+	"hammerid" "1588938"
+}
 ; --- Remove fallen oil barrel by the shed
 {
 	"hammerid" "1549590"
@@ -474,6 +503,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Prop for ladder by sewer drop as a visual indicator
+{
+	"classname" "prop_dynamic"
+	"origin" "3767 656 208"
+	"angles" "0 0 0"
+	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
 ; --- Clipping on stairs after the alarm cars to stop players getting stuck
 {
 	"classname" "env_physics_blocker"
@@ -507,15 +545,6 @@ add:
 	"boxmaxs" "1 2.5 104.5"
 	"initialstate" "1"
 	"BlockType" "0"
-}
-; --- Prop for ladder by sewer drop as a visual indicator
-{
-	"classname" "prop_dynamic"
-	"origin" "3767 656 208"
-	"angles" "0 0 0"
-	"model" "models/props_downtown/gutter_downspout_straight02.mdl"
-	"solid" "6"
-	"disableshadows" "1"
 }
 ; --- Make non-active alarm cars easier to tell apart by changing their colors
 modify:
@@ -659,9 +688,9 @@ add:
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "5013 6599 15"
+	"origin" "4960 6569 26"
 	"angles" "0 90 0"
-	"model" "models/props_foliage/urban_trees_dryleaves01.mdl"
+	"model" "models/props_foliage/urban_tree_base_bushes01_large.mdl"
 	"solid" "0"
 	"disableshadows" "1"
 }
@@ -718,7 +747,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Fence cover by the green dumpster after the trailer drop
+; --- Fence cover at the end of the street after the trailer drop
 {
 	"classname" "prop_dynamic"
 	"origin" "3810 2014 4"
