--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -219,7 +219,7 @@ modify:
 	}
 }
 add:
-; --- Block skipping over the fence in the finale street (Extend clips added by TLS)
+; --- Block skipping over the fence in the final street (Extend clips added by TLS)
 {
 	"classname" "env_physics_blocker"
 	"origin" "-1839 -1216 394"
