--- a/cfg/stripper/maps/c5m5_bridge.cfg
+++ b/cfg/stripper/maps/c5m5_bridge.cfg
@@ -18,7 +18,7 @@ add:
 	"targetname" "final_tank_trigger"
 	"filtername" "filter_survivors"
 	"spawnflags" "1"
-	"OnTrigger" "final_tank_spawn,SpawnZombie,,3,1"
+	"OnTrigger" "final_tank_spawn,SpawnZombie,,1,1"
 }
 ; --- Spawn a tank inside the helicopter
 {
@@ -51,7 +51,7 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Cut off the right side path so survivors can just rush past tank / reach the chopper too fast
+; --- Cut off the right side path so survivors can't just rush past tank / reach the chopper too fast
 {
 	"classname" "prop_dynamic"
 	"origin" "8920 4100 192"
@@ -186,6 +186,19 @@ modify:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+add:
+; --- Melee weapon spawn outside the saferoom
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "-11522 6163 457"
+	"angles" "0 105 90"
+	"melee_weapon" "any"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
 ; --- Remove various item spawns to add our own
 filter:
 {
