Completed work on c6m2 and c6m3 Updated readme Filter c3m1 floating barrels Updated entity template

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -201,3 +201,22 @@ add:
 	"classname" "logic_auto"
 	"OnMapSpawn" "[entity targetname or classname],Kill,,10,-1"
 }
+
+
+; #####################  NAV MESH  ####################
+; --- Entities for modifying anything nav mesh related
+; --- point_nav_attribute_region can be used to assign attributes to nav mesh regions defined by the spawnflags used
+; --- Once placed these entities must be activated by a logic_auto
+; --- 4096: Obscured - allows SI and mobs to spawn without LOS being blocked, 2048: Checkpoint - saferoom nav area
+{
+	"classname" "point_nav_attribute_region"
+	"origin" "[x y z]"
+	"mins" "-32 -32 -32"
+	"maxs" "32 32 32"
+	"spawnflags" "[n]"
+	"targetname" "[nav name]"
+}
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "[nav name],ApplyNavAttributes,,10,-1"
+}
