Fix #11 c2m2 dumpster (hopefully)

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -92,11 +92,12 @@ modify:
 add:
 {
 	"classname" "prop_physics"
-	"origin" "-2087 -1830 -128"
+	"origin" "-2087 -1830 -126"
 	"angles" "0 270 0"
 	"model" "models/props_junk/dumpster_2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+	"spawnflags" "256"
 }
 
 ; #############  MAP CLIPPING AND ISSUES  #############
