Added failsafe for event alarm sound removal

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -1016,6 +1016,7 @@ modify:
 	insert:
 	{
 		"OnTrigger" "store_alarm_generic,FadeOut,5,3,-1"
+		"OnTrigger" "store_alarm_generic,Kill,,10,-1"
 	}
 }
 
