--- a/cfg/stripper/maps/c2m3_coaster.cfg
+++ b/cfg/stripper/maps/c2m3_coaster.cfg
@@ -1006,6 +1006,7 @@ modify:
 	insert:
 	{
 		"OnTrigger" "finale_alarm_sound,FadeOut,5,3,-1"
+		"OnTrigger" "finale_alarm_sound,Kill,,10,-1"
 		"OnTrigger" "coaster_start_sound_downhill,Kill,,12,-1"
 		"OnTrigger" "coaster_start_sound_downhill_long,Kill,,12,-1"
 		"OnTrigger" "coaster_start_sound_uphill,Kill,,12,-1"
