--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -827,8 +827,9 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "gate_1_alarmFadeOut53-1"
-		"OnTrigger" "gate_1_alarmVolume53-1"
+		"OnTrigger" "gate_1_alarm,FadeOut,5,3,-1"
+		"OnTrigger" "gate_1_alarm,Volume,5,3,-1"
+		"OnTrigger" "gate_1_alarm,Kill,,10,-1"
 	}
 }
 modify:
@@ -839,8 +840,9 @@ modify:
 	}
 	insert:
 	{
-		"OnTrigger" "gate_2_alarmFadeOut53-1"
-		"OnTrigger" "gate_2_alarmVolume53-1"
+		"OnTrigger" "gate_2_alarm,FadeOut,5,3,-1"
+		"OnTrigger" "gate_2_alarm,Volume,5,3,-1"
+		"OnTrigger" "gate_2_alarm,Kill,,10,-1"
 	}
 }
 
