--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -1421,6 +1421,7 @@ modify:
 	insert:
 	{
 		"OnTrigger" "finale_alarm_sound,FadeOut,5,3,-1"
+		"OnTrigger" "finale_alarm_sound,Kill,,10,-1"
 	}
 }
 
