Completed work on c7m1 c5m4: Block standing on section of garage roof that was missing clip, block standing on edge of electrical box after pool room Fix #12

--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -546,88 +546,90 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
-; --- Make non-active alarm cars easier to tell apart by changing their colors
-modify:
-{
-	match:
-	{
-		"targetname" "alarm1-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm1-caralarm_car1,Color,45 58 151,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm2-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm2-caralarm_car1,Color,9 41 138,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm3-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm3-caralarm_car1,Color,68 91 183,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm4-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm4-caralarm_car1,Color,68 68 183,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm5-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm5-caralarm_car1,Color,52 70 114,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm6-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm6-caralarm_car1,Color,9 41 138,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm7-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm7-caralarm_car1,Color,45 58 151,1,-1"
-	}
-}
-{
-	match:
-	{
-		"targetname" "alarm8-relay_caralarm_off"
-	}
-	insert:
-	{
-		"OnTrigger" "alarm8-caralarm_car1,Color,68 91 183,1,-1"
-	}
-}
+; --- Make non-active alarm cars easier to tell apart by changing their colors - Currently bugged on 2nd round
+;* Made inactive alarm cars a different color to help players tell them apart.
+;<img src="https://i.imgur.com/raHVUOC.jpg" width="400">
+;modify:
+;{
+;	match:
+;	{
+;		"targetname" "alarm1-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm1-caralarm_car1,Color,45 58 151,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm2-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm2-caralarm_car1,Color,9 41 138,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm3-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm3-caralarm_car1,Color,68 91 183,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm4-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm4-caralarm_car1,Color,68 68 183,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm5-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm5-caralarm_car1,Color,52 70 114,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm6-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm6-caralarm_car1,Color,9 41 138,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm7-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm7-caralarm_car1,Color,45 58 151,1,-1"
+;	}
+;}
+;{
+;	match:
+;	{
+;		"targetname" "alarm8-relay_caralarm_off"
+;	}
+;	insert:
+;	{
+;		"OnTrigger" "alarm8-caralarm_car1,Color,68 91 183,1,-1"
+;	}
+;}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
