--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -115,6 +115,14 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+{
+	"classname" "env_physics_blocker"
+	"origin" "-958 2922 704"
+	"mins" "-2 -34 -448"
+	"maxs" "2 34 448"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Extend block above pool room return drop to stop survivors from getting over the fence early
 {
 	"classname" "env_physics_blocker"
@@ -131,6 +139,15 @@ add:
 	"origin" "-1304 1985.6 300"
 	"mins" "-88 -0.5 -76"
 	"maxs" "88 0.5 76"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from standing on the edge of the electrical bx after the pool room
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1646 2013 660"
+	"mins" "-18 -3 -492"
+	"maxs" "18 3 492"
 	"initialstate" "1"
 	"BlockType" "1"
 }
