--- a/cfg/stripper/maps/c5m4_quarter.cfg
+++ b/cfg/stripper/maps/c5m4_quarter.cfg
@@ -142,7 +142,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from standing on the edge of the electrical bx after the pool room
+; --- Block survivors from standing on the edge of the electrical box after the pool room
 {
 	"classname" "env_physics_blocker"
 	"origin" "-1646 2013 660"
