--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -549,6 +549,7 @@ add:
 ; --- Make non-active alarm cars easier to tell apart by changing their colors - Currently bugged on 2nd round
 ;* Made inactive alarm cars a different color to help players tell them apart.
 ;<img src="https://i.imgur.com/raHVUOC.jpg" width="400">
+;maybe add fixed colors to the "on" trigger
 ;modify:
 ;{
 ;	match:
