c3m1 replaced ferry ammo pile

--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -32,17 +32,16 @@ add:
 	"spawnflags" "2"
 	"count" "5"
 }
-; --- Ammo pile on the ferry
+; --- Ammo pile in the picnic area after the ferry
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "-4425 6122 0"
+	"origin" "-3840 7197 0"
 	"angles" "0 0 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
 	"count" "5"
-	"parentname" "ferry_tram"
 }
 ; --- Ammo pile on the table at the walkway near the end of the map
 {
