c2m1 block LOS under added humvee by the saferoom c2m1 adjusted position of added rocks near the end of the map c2m2 adjusted angle of added foodcart and ladder on foodcart to fix some collision issues c2m4 replaced 2 TLS update bumper cars in saferoom with a single bumper car c2m4 replaced added plywood at event to address nav issues

--- a/cfg/stripper/maps/c2m1_highway.cfg
+++ b/cfg/stripper/maps/c2m1_highway.cfg
@@ -744,6 +744,26 @@ add:
 	"cpoint2_parent" "0"
 	"cpoint1_parent" "0"
 }
+; --- Block LOS under humvee
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_a,AddOutput,mins -80 -1 -28,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_a,AddOutput,maxs 80 1 28,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_b,AddOutput,mins -1 -47 -28,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_b,AddOutput,maxs 1 47 28,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_saferoom_humvee_b,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "9656 8343 -528"
+	"targetname" "anv_mapfixes_losfix_saferoom_humvee_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "9577 8391 -528"
+	"targetname" "anv_mapfixes_losfix_saferoom_humvee_b"
+}
 ; --- Trees after the Whispering Oaks sign by the saferoom
 {
 	"classname" "prop_dynamic"
@@ -928,7 +948,7 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "-1498 1296 -1815"
-	"angles" "17.4148 104.104 20.2461"
+	"angles" "-3.47988 103.47 1.41387"
 	"model" "models/props_foliage/swamp_rock02.mdl"
 	"solid" "6"
 	"disableshadows" "1"
