--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1338,15 +1338,6 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Foodcart outside the end saferoom
-;{
-;	"classname" "prop_dynamic"
-;	"origin" "-3390 -5387 -64"
-;	"angles" "0 260 0"
-;	"model" "models/props_fairgrounds/foodcart.mdl"
-;	"solid" "6"
-;	"disableshadows" "1"
-;}
 ; --- Porta potties by the end saferoom
 {
 	"classname" "prop_dynamic"
@@ -1745,15 +1736,15 @@ add:
 {
 	"classname" "prop_dynamic"
 	"origin" "2135 2716 -2"
-	"angles" "0 14 0"
+	"angles" "0 15 0"
 	"model" "models/props_fairgrounds/foodcart.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
 	"classname" "prop_dynamic_override"
-	"origin" "2092 2670 109"
-	"angles" "0 104 0"
+	"origin" "2094 2669 109"
+	"angles" "0 105 0"
 	"model" "models/props_signs/sign_horizontal_05.mdl"
 	"solid" "0"
 	"disableshadows" "1"
@@ -1762,7 +1753,7 @@ add:
 {
 	"classname" "env_physics_blocker"
 	"origin" "2135 2718 249"
-	"angles" "0 14 0"
+	"angles" "0 15 0"
 	"mins" "-55 -109 -129"
 	"maxs" "55 109 129"
 	"boxmins" "-55 -109 -129"
@@ -2161,7 +2152,7 @@ add:
 {
 	"classname" "func_simpleladder"
 	"origin" "-890 1121 -14.5"
-	"angles" "0.00 0.00 0.00"
+	"angles" "0 0 0"
 	"model" "*166"
 	"normal.x" "0.00"
 	"normal.y" "-1.00"
@@ -2171,13 +2162,25 @@ add:
 ; --- Infected ladder to climb on the foodcart
 {
 	"classname" "func_simpleladder"
-	"origin" "4201.6 597.04 -68.5"
-	"angles" "0.00 104.00 0.00"
-	"model" "*166"
-	"normal.x" "0.97"
-	"normal.y" "0.24"
+	"origin" "4621 6822 46"
+	"angles" "0 0 0"
+	"model" "*65"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
 	"normal.z" "0.00"
 	"team" "2"
+}
+; --- Clipping for ladder
+{
+	"classname" "env_physics_blocker"
+	"origin" "2182 2750 60"
+	"angles" "0 60 0"
+	"mins" "-4 -8 -60"
+	"maxs" "4 8 60"
+	"boxmins" "-4 -8 -60"
+	"boxmaxs" "4 8 60"
+	"initialstate" "1"
+	"BlockType" "0"
 }
 
 ; =====================================================
