--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -97,6 +97,42 @@ add:
 ; ==                 HITTABLE CHANGES                ==
 ; ==           Add/remove/modify hittables           ==
 ; =====================================================
+; --- Remove TLS saferoom bumper cars, re-add single bumper car
+add:
+{
+	"classname" "logic_auto"
+	; --- Remove bumper cars and clip
+	"OnMapSpawn" "anv_mapfixes_hittable_bumpera,Kill,,10,-1"
+	"OnMapSpawn" "anv_mapfixes_hittable_bumperb,Kill,,10,-1"
+	"OnMapSpawn" "bumper_safety_clip,Kill,,12,-1"
+	; --- Enable motion on new bumper car and move into position
+	"OnMapSpawn" "saferoom_bumper_replacement_template,ForceSpawn,,11,-1"
+}
+{
+	"classname" "prop_physics"
+	"origin" "3329 3280 -186"
+	"angles" "0 338 0"
+	"model" "models/props_fairgrounds/bumpercar.mdl"
+	"solid" "6"
+	"targetname" "saferoom_bumper_replacement"
+}
+; --- Template to spawn the bumper car
+{
+	"classname" "point_template"
+	"targetname" "saferoom_bumper_replacement_template"
+	"Template01" "saferoom_bumper_replacement"
+	"spawnflags" "2"
+}
+; --- Clip to prevent survivors walking into the bumper cars until we've fixed the spawns
+{
+	"classname" "env_physics_blocker"
+	"origin" "3293 3294 -107"
+	"mins" "-90 -45 -80"
+	"maxs" "90 45 80"
+	"initialstate" "1"
+	"BlockType" "1"
+	"targetname" "bumper_safety_clip"
+}
 ; --- Removed one of the dumpsters after the bumper cars
 filter:
 {
@@ -929,15 +965,46 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Leaning plywood on the CEDA balcony
+; --- Plywood to block LOS on the CEDA balcony at the event
 {
 	"classname" "prop_dynamic"
-	"origin" "-3077 1137 -96"
-	"angles" "0 180 0"
-	"model" "models/props_industrial/plywood_leaning.mdl"
+	"origin" "-3078 1284 -55"
+	"angles" "0 90 -90"
+	"model" "models/props_highway/plywood_01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
+{
+	"classname" "prop_dynamic"
+	"origin" "-3078 1212 -55"
+	"angles" "0 90 -90"
+	"model" "models/props_highway/plywood_03.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Leaning plywood on the CEDA balcony
+;{
+;	"classname" "prop_dynamic"
+;	"origin" "-3077 1137 -104";-96"
+;	"angles" "0 180 0"
+;	"model" "models/props_industrial/plywood_leaning.mdl"
+;	"solid" "6"
+;	"disableshadows" "1"
+;}
+; --- Nav blocker for plywood
+;{
+;	"classname" "logic_auto"
+;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,mins -52 -72 -32,0,-1"
+;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,maxs 52 72 32,0,-1"
+;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,solid 2,0,-1"
+;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,BlockNav,,1,-1"
+;}
+;{
+;	"classname" "func_nav_blocker"
+;	"origin" "-3124 1144 -64"
+;	"targetname" "anv_mapfixes_plywood_nav_block"
+;	"teamToBlock" "3"
+;}
 ; --- Tent over a porta potty at the event
 {
 	"classname" "prop_dynamic"
