--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -105,7 +105,7 @@ add:
 	"OnMapSpawn" "anv_mapfixes_hittable_bumpera,Kill,,10,-1"
 	"OnMapSpawn" "anv_mapfixes_hittable_bumperb,Kill,,10,-1"
 	"OnMapSpawn" "bumper_safety_clip,Kill,,12,-1"
-	; --- Enable motion on new bumper car and move into position
+	; --- Spawn new bumper car
 	"OnMapSpawn" "saferoom_bumper_replacement_template,ForceSpawn,,11,-1"
 }
 {
@@ -982,29 +982,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-; --- Leaning plywood on the CEDA balcony
-;{
-;	"classname" "prop_dynamic"
-;	"origin" "-3077 1137 -104";-96"
-;	"angles" "0 180 0"
-;	"model" "models/props_industrial/plywood_leaning.mdl"
-;	"solid" "6"
-;	"disableshadows" "1"
-;}
-; --- Nav blocker for plywood
-;{
-;	"classname" "logic_auto"
-;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,mins -52 -72 -32,0,-1"
-;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,maxs 52 72 32,0,-1"
-;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,AddOutput,solid 2,0,-1"
-;	"OnMapSpawn" "anv_mapfixes_plywood_nav_block,BlockNav,,1,-1"
-;}
-;{
-;	"classname" "func_nav_blocker"
-;	"origin" "-3124 1144 -64"
-;	"targetname" "anv_mapfixes_plywood_nav_block"
-;	"teamToBlock" "3"
-;}
 ; --- Tent over a porta potty at the event
 {
 	"classname" "prop_dynamic"
