c3m1 moved floating barrel fix out of global filters Global fixes: replace all prop_physics_multiplayer with prop_physics (fixes custom campaigns ignoring global fixes) c1m1 replace 'pill bin' by the elevator (filtered out by physics prop fixes)

--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -279,6 +279,23 @@ modify:
 		"spawnflags" "33"
 	}
 }
+filter:
+; --- Remove floating / fallen oil barrels
+{
+	"hammerid" "1484643"
+}
+{
+	"hammerid" "1484675"
+}
+{
+	"hammerid" "1484691"
+}
+{
+	"hammerid" "2090218"
+}
+{
+	"hammerid" "2090222"
+}
 add:
 ; --- Clipping between 2 trees after the ferry to let players go through the gap without jumping
 {
