c5m1 added missing glass to wrecked car c5m4 adjusted position of ammo pile at the event to be more visible

--- a/cfg/stripper/maps/c5m1_waterfront.cfg
+++ b/cfg/stripper/maps/c5m1_waterfront.cfg
@@ -337,6 +337,15 @@ add:
 	"initialstate" "1"
 	"BlockType" "0"
 }
+; --- Add missing glass to vehicles
+{
+	"classname" "prop_dynamic"
+	"origin" "-840 -1664 -375"
+	"angles" "0 15 0"
+	"model" "models/props_vehicles/cara_82hatchback_wrecked_glass.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
