Started work on c3m2 Removed thesaccing_v2_linux.vpk as it does in fact cause the wrong arm model to be used c1m1 Remove fire sounds from the start of the map that can sometimes loop forever and play across the entire map Fixed all single pickup weapons having physics enabled before being picked up (players could grief by hitting them outside the map) c2m2 Moved added magnum spawn in the newly opened area to the table closest to the entrance

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -87,6 +87,7 @@ add:
 	"origin" "[x y z]"
 	"angles" "[p y r]"
 	"ammo" "[n]"
+	"spawnflags" "1"
 }
 ; --- Melee Weapons
 ; --- NOTE: Use "any" for a random melee weapon
