--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -109,12 +109,14 @@ add:
 	"origin" "423 5512 2895"
 	"angles" "0 236.5 84"
 	"ammo" "650"
+	"spawnflags" "1"
 }
 {
 	"classname" "weapon_shotgun_chrome"
 	"origin" "444 5480 2861"
 	"angles" "-76.7195 199.715 70.0679"
 	"ammo" "72"
+	"spawnflags" "1"
 }
 
 ; =====================================================
@@ -127,6 +129,7 @@ add:
 	"classname" "weapon_pistol_magnum"
 	"origin" "675 5683 2699"
 	"angles" "0 150 90"
+	"spawnflags" "1"
 }
 ; --- Single pickup T1s on the cleaning cart around the corner in the first hallway
 {
@@ -134,12 +137,14 @@ add:
 	"origin" "1679 5813 2699"
 	"angles" "0 287.5 84"
 	"ammo" "650"
+	"spawnflags" "1"
 }
 {
 	"classname" "weapon_pumpshotgun"
 	"origin" "1681 5765 2667"
 	"angles" "-80.826 60.7614 -60.5252"
 	"ammo" "72"
+	"spawnflags" "1"
 }
 ; --- Make the melee in the map room always spawn
 modify:
@@ -583,6 +588,22 @@ filter:
 ; --- Remove the chopper intro sound
 {
 	"targetname" "sound_chopperleave"
+}
+; --- Remove fire sounds from the start of the map that can sometimes loop forever and play across the entire map (c1m1.Fireloop02 and c1m1.Fireloop03)
+{
+	"targetname" "fire14_sound"
+}
+{
+	"targetname" "fire15_sound"
+}
+{
+	"targetname" "fire13_sound"
+}
+{
+	"targetname" "fire16_sound"
+}
+{
+	"targetname" "fire03_sound"
 }
 
 ; =====================================================
