--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -2292,7 +2292,7 @@ add:
 ; --- Add deagle and melee spawns to new area
 {
 	"classname" "weapon_spawn"
-	"origin" "2326 -274 33"
+	"origin" "1686 -278 33"
 	"angles" "0 259.5 -90"
 	"weapon_selection" "weapon_pistol_magnum"
 	"spawn_without_director" "1"
@@ -2313,17 +2313,17 @@ add:
 	"count" "1"
 }
 ; --- Add a static scout spawn to the new area (if sniper is enabled)
-{
-	"classname" "weapon_spawn"
-	"origin" "2323 -318 33"
-	"angles" "0 259.5 -90"
-	"weapon_selection" "weapon_sniper_scout"
-	"spawn_without_director" "1"
-	"solid" "6"
-	"disableshadows" "1"
-	"spawnflags" "2"
-	"count" "5"
-}
+;{
+;	"classname" "weapon_spawn"
+;	"origin" "2323 -318 33"
+;	"angles" "0 259.5 -90"
+;	"weapon_selection" "weapon_sniper_scout"
+;	"spawn_without_director" "1"
+;	"solid" "6"
+;	"disableshadows" "1"
+;	"spawnflags" "2"
+;	"count" "5"
+;}
 ; --- Add a potential pill spawn on one of the game buildings
 {
 	"classname" "weapon_pain_pills_spawn"
