--- a/cfg/stripper/maps/c4m5_milltown_escape.cfg
+++ b/cfg/stripper/maps/c4m5_milltown_escape.cfg
@@ -133,6 +133,7 @@ modify:
 	"classname" "weapon_pistol_magnum"
 	"origin" "-6652 7633 97"
 	"angles" "0 81 90"
+	"spawnflags" "1"
 }
 ; --- Make the spawns inside the diner always be the alternative tier 1 type
 modify:
