--- a/cfg/stripper/maps/c4m1_milltown_a.cfg
+++ b/cfg/stripper/maps/c4m1_milltown_a.cfg
@@ -78,18 +78,21 @@ add:
 	"origin" "-6689 7628.07 101.259"
 	"angles" "0 0 90"
 	"ammo" "72"
+	"spawnflags" "1"
 }
 {
 	"classname" "weapon_smg"
 	"origin" "-6690.96 7641.87 101.223"
 	"angles" "0 30 90"
 	"ammo" "650"
+	"spawnflags" "1"
 }
 ; --- Single magnum spawn before diner
 {
 	"classname" "weapon_pistol_magnum"
 	"origin" "-6652 7633 97"
 	"angles" "0 81 90"
+	"spawnflags" "1"
 }
 ; --- Make the spawns inside the diner always be the alternative tier 1 type
 modify:
