c2m2 made the added magnum spawn potentially be a pistol or magnum

--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -2289,12 +2289,12 @@ modify:
 }
 ; --- ITEMS
 add:
-; --- Add deagle and melee spawns to new area
+; --- Add pistol/deagle and melee spawns to new area
 {
 	"classname" "weapon_spawn"
 	"origin" "1686 -278 33"
 	"angles" "0 259.5 -90"
-	"weapon_selection" "weapon_pistol_magnum"
+	"weapon_selection" "any_pistol"
 	"spawn_without_director" "1"
 	"solid" "6"
 	"disableshadows" "1"
