Completed work on c3m2 Changelog prep Updated readme

--- a/cfg/stripper/maps/c3m1_plankcountry.cfg
+++ b/cfg/stripper/maps/c3m1_plankcountry.cfg
@@ -326,7 +326,7 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-; --- Block LOS under floating trees / shrubs
+; --- Block LOS under floating trees
 {
 	"classname" "logic_auto"
 	; --- Large trees
