c1m4 added clips to block gas cans from being launched to unreachable locations c2m2 replaced added fences by the slide with a vending machine and box (#2)

--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -328,6 +328,39 @@ add:
 	"initialstate" "1"
 	"BlockType" "4"
 }
+; --- Additional blocking on areas that infected can reach, so we have to use func_clip_vphysics which has more limitations
+; --- Block gas cans from reaching the entire 4th floor
+{
+	"classname" "func_clip_vphysics"
+	"origin" "1088 -1248 832"
+	"model" "*157"
+	"filtername" "filter_gascan"
+}
+{
+	"classname" "func_clip_vphysics"
+	"origin" "-1024 -1248 832"
+	"model" "*157"
+	"filtername" "filter_gascan"
+}
+; --- Additional blocking behind the existing clips on the 3rd floor as gascans with enough speed can clip through them
+{
+	"classname" "func_clip_vphysics"
+	"origin" "2192 -3168 600"
+	"model" "*157"
+	"filtername" "filter_gascan"
+}
+{
+	"classname" "func_clip_vphysics"
+	"origin" "-3864.5 -3284.55 104.87"
+	"model" "*121"
+	"filtername" "filter_gascan"
+}
+{
+	"classname" "func_clip_vphysics"
+	"origin" "-3752.5 -3284.55 104.87"
+	"model" "*121"
+	"filtername" "filter_gascan"
+}
 
 
 ; ###########  ADDITIONAL PROPS AND SPAWNS  ###########
