--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -1151,36 +1151,20 @@ add:
 	"initialstate" "1"
 	"BlockType" "2"
 }
-; --- Additional fences under the slide pill room to make chipping through the fence more risky
+; --- Props under the slide pill room to make chipping through the fence more risky
 {
 	"classname" "prop_dynamic"
-	"origin" "-2080 -3585 -128"
+	"origin" "-2082 -3607 -128"
 	"angles" "0 270 0"
-	"model" "models/props_urban/fence001_64.mdl"
+	"model" "models/props_office/vending_machine01.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
 {
 	"classname" "prop_dynamic"
-	"origin" "-2176 -3585 -128"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence_gate001_256.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-2272 -3585 -128"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence001_64.mdl"
-	"solid" "6"
-	"disableshadows" "1"
-}
-{
-	"classname" "prop_dynamic"
-	"origin" "-2304 -3585 -128"
-	"angles" "0 90 0"
-	"model" "models/props_urban/fence_post001.mdl"
+	"origin" "-2150 -3606 -128"
+	"angles" "0 180 0"
+	"model" "models/props/cs_militia/boxes_frontroom.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
