c1m1 blocked LOS under added snack machines c1m1 removed some additional fire effects / collapse sounds after the elevator c1m1 removed scripted zombie spawns that fall through the windows by the end saferoom c1m2 added a fence cover by the dumpster drop c1m2 enabled the 2 alarm cars after the event c1m2 added LOS blockers under added props after the event

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -95,6 +95,14 @@ modify:
 		"OnStartTouch" "call_elevator_button_prop,StartGlowing,,0,-1"
 	}
 }
+; --- Remove scripted zombie spawns that fall through the windows by the end saferoom
+filter:
+{
+	"hammerid" "4029840"
+}
+{
+	"targetname" "case_trigger_lobby_fall"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -473,6 +481,18 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Block LOS under snack machine
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,mins -22 -16 -4,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,maxs 22 16 4,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_elevator,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "1997 5517 2468"
+	"targetname" "anv_mapfixes_losfix_snack_elevator"
+}
 ; --- Props in the Banquet Hall A area for spawns
 {
 	"classname" "prop_dynamic"
@@ -489,6 +509,18 @@ add:
 	"model" "models/props_equipment/snack_machine2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Block LOS under snack machine
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,mins -2 -23 -4,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,maxs 2 23 4,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_snack_hall,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-378 5337 1188"
+	"targetname" "anv_mapfixes_losfix_snack_hall"
 }
 ; --- Props by the end saferoom for spawns
 {
@@ -653,6 +685,34 @@ filter:
 }
 {
 	"targetname" "ds-f3ceilingF_timer"
+}
+{
+	"targetname" "ds-f3ceilingF1-template"
+}
+{
+	"targetname" "ds-f3ceilingF2-template"
+}
+{
+	"targetname" "ds-f3ceilingF3-template"
+}
+{
+	"targetname" "ds-f3ceilingF4-template"
+}
+{
+	"targetname" "ds-f3ceilingF5-template"
+}
+{
+	"targetname" "ds-f3ceilingF6-template"
+}
+; --- Triggers that enable fire effects after elevator
+{
+	"hammerid" "4484791"
+}
+{
+	"hammerid" "4557051"
+}
+{
+	"hammerid" "4563800"
 }
 ; --- Reduce density of the ground floor fog
 modify:
