--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -92,6 +92,28 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Enable the 2 alarm cars after the event
+modify:
+{
+	match:
+	{
+		"targetname" "branch_caralarm-car1_alarm"
+	}
+	replace:
+	{
+		"OnTrue" "relay_caralarm_on-car1_alarmTrigger0-1"
+	}
+}
+{
+	match:
+	{
+		"targetname" "branch_caralarm-car2_alarm"
+	}
+	replace:
+	{
+		"OnTrue" "relay_caralarm_on-car2_alarmTrigger0-1"
+	}
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -858,6 +880,15 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Fence cover by dumpster drop
+{
+	"classname" "prop_dynamic"
+	"origin" "-2367 1674 0"
+	"angles" "0 338 0"
+	"model" "models/props_urban/fence_cover001_256.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Plywood by the dumpster drop to make spawning slightly easier
 {
 	"classname" "prop_dynamic"
@@ -937,6 +968,18 @@ add:
 	"cpoint2_parent" "0"
 	"cpoint1_parent" "0"
 }
+; --- Block LOS under bus
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,mins -3 -205 -10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,maxs 3 205 10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_crashed_bus,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-7871 -604 392"
+	"targetname" "anv_mapfixes_losfix_crashed_bus"
+}
 ; --- Props for spawns by the end saferoom
 {
 	"classname" "prop_dynamic"
@@ -945,6 +988,18 @@ add:
 	"model" "models/props_vehicles/bus01_2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Block LOS under bus
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,mins -3 -205 -10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,maxs 3 205 10,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_bus,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-8666 -1397 392"
+	"targetname" "anv_mapfixes_losfix_extra_bus"
 }
 {
 	"classname" "prop_dynamic"
@@ -993,6 +1048,18 @@ add:
 	"model" "models/props_vehicles/van_glass.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Block LOS under van
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,mins -66 -3 -12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,maxs 66 3 12,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_extra_van,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-7652 -3918 394"
+	"targetname" "anv_mapfixes_losfix_extra_van"
 }
 
 ; =====================================================
