c1m2 added boxes and a billboard at the bridge before the gun store c1m3 added guarenteed spawns for shotgun and SMG in the back corner before the event path c1m3 added an ammo pile on boxes near the start of the path leading to the event c1m3 added a clip to make the jump back up the one way drop from the vending machine easier c1m4 removed clip that was accidently left over from testing

--- a/cfg/stripper/maps/c1m2_streets.cfg
+++ b/cfg/stripper/maps/c1m2_streets.cfg
@@ -898,15 +898,31 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Boxes on the walkway
+{
+	"classname" "prop_dynamic"
+	"origin" "-5165 148 672"
+	"angles" "0 225 0"
+	"model" "models/props/cs_militia/boxes_garage_lower.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
 ; --- Billboard by the walkway
-;{
-;	"classname" "prop_dynamic"
-;	"origin" "-4815 30 357"
-;	"angles" "0 315 0"
-;	"model" "models/props_signs/raisedbillboard.mdl"
-;	"solid" "6"
-;	"disableshadows" "1"
-;}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4825 40 386"
+	"angles" "0 315 0"
+	"model" "models/props_signs/raisedbillboard.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"lightingorigin" "billboard_lighting"
+}
+; --- Fix lighting origin
+{
+	"classname" "info_target"
+	"origin" "-4825 -408 386"
+	"targetname" "billboard_lighting"
+}
 ; --- Crashed bus after the event
 {
 	"classname" "prop_dynamic"
