--- a/cfg/stripper/maps/c1m3_mall.cfg
+++ b/cfg/stripper/maps/c1m3_mall.cfg
@@ -188,8 +188,31 @@ filter:
 {
 	"hammerid" "8442701"
 }
-; --- Move the pill cabinet on the lower route to the other side of the wall
+; --- Add guarenteed spawns for shotgun and SMG in the back corner before the event path
+add:
+{
+	"classname" "weapon_spawn"
+	"origin" "2795 -1781 302"
+	"angles" "0 90 90"
+	"weapon_selection" "tier1_shotgun"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 modify:
+{
+	match:
+	{
+		"hammerid" "321383"
+	}
+	replace:
+	{
+		"weapon_selection" "any_smg"
+	}
+}
+; --- Move the pill cabinet on the lower route to the other side of the wall
 {
 	match:
 	{
@@ -206,6 +229,18 @@ modify:
 ; ==                STATIC AMMO PILES                ==
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
+add:
+; --- Ammo pile on boxes near the start of the path leading to the event
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "746 -681 32"
+	"angles" "0 90 0"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 
 ; =====================================================
 ; ==                 HITTABLE CHANGES                ==
@@ -357,6 +392,15 @@ add:
 	"model" "models/props_equipment/snack_machine2.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Clip to make the jump easier for survivors
+{
+	"classname" "env_physics_blocker"
+	"origin" "1615 -1024 311"
+	"mins" "-4 -32 -31"
+	"maxs" "4 32 31"
+	"initialstate" "1"
+	"BlockType" "1"
 }
 ; --- Props on the upper floor by the end saferoom
 {
